k8s/notes-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  namespace: note-rags
  labels:
    app: notes-api
spec:
  type: LoadBalancer
  ports:
  - port: 8003
    targetPort: 8000
    protocol: TCP
  selector:
    app: notes-api
